# MarketFirstPreprocessHub

./: .gitignore  README.md  main.py  mirror_maker.py  order_ticker.py  orderbook.py  pyproject.toml  requirements.txt  run_tests.py  sink_connector.py  test.py  ticker.py
mq/: dlt_producer.py  kafka_config.py  m_comsumer.py  m_producer.py  partition_manager.py
mq/exception/: __init__.py  m_exception.py
mq/types/: __init__.py  market_config_type.py  market_data_type.py  market_order_type.py
setting/: config.yml  kafka_setting.py  sample_setting.conf  ticker.yml  yml_load.py
src/: common_consumer.py  config.py  data_format.py  logger.py  meta_create.py
src/asia/orderbook/: bybit_orderbook.py  gateio_orderbook.py  okx_orderbook.py
src/common/: common_consumer.py  common_orderbook.py  common_ticker.py
src/common/admin/: batch_processor.py  metric_manager.py  metrics_manager.py  time_stracker.py
src/korea/orderbook/: onekorbit_orderbook.py  upbithumb_orderbook.py
src/ne/orderbook/: binance_orderbook.py  kraken_orderbook.py
src/orderbook/: asia_orderbook.py  korea_orderbook.py  ne_orderbook.py
src/orderbook/asia/: bybit_orderbook.py  gateio_orderbook.py  okx_orderbook.py
src/orderbook/korea/: onekorbit_orderbook.py  upbithumb_orderbook.py
src/orderbook/ne/: binance_orderbook.py  kraken_orderbook.py
src/ticker/: asia_ticker.py  common_ticker.py  korea_ticker.py  ne_asia_ticker.py  ne_ticker.py
tests/: performance_test.py  run_performance_tests.py
type_model/: __init__.py  config_model.py  kafka_model.py  orderbook_model.py  ticker_model.py
(+2 files in other folders)
